# diss-project

./: .gitignore  Cargo.toml  README.md
macro-export/: Cargo.toml
macro-export/src/: lib.rs
macro-export/tests/: macro_tests.rs
main-app/: Cargo.toml
main-app/src/: app_state.rs  assets.rs  camera_plugin.rs  constants.rs  drawing_plugin.rs  main.rs  misc.rs  ui_plugin.rs
main-app/src/algo_execution/: back.rs  mod.rs  plugin.rs
main-app/src/state_management/: edge_management.rs  events.rs  mod.rs  mouse_state.rs  node_addition_state.rs  state_init.rs
misc-lib/: Cargo.toml
misc-lib/src/: lib.rs
pure-circuit-lib/: Cargo.toml
pure-circuit-lib/proptest-regressions/: gates.txt  graph.txt
pure-circuit-lib/proptest-regressions/solution_finders/: backtracking.txt  evo_search.txt
pure-circuit-lib/src/: gates.rs  graph.rs  lib.rs  test_utils.rs
pure-circuit-lib/src/solution_finders/: backtracking.rs  base_finder.rs  evo_search.rs  gate_backtrack.rs  mod.rs  solver_trait.rs
