[package]
name = "pure-circuit-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
macro_export = { path = "../macro-export" }
misc-lib = { path = "../misc-lib" }
enum-derived = "0.9.2"
itertools = "0.14.0"
petgraph = "0.7.1"
proptest = "1.6.0"
rand = "0.9.0"
rand_derive2 = "0.1.21"
strum = "0.27.1"
strum_macros = "0.27.1"
log = "0.4.27"
anyhow = "1.0.98"
